# RUST

./: Cargo.toml  storages_documents.sql
JS/: register.js
front-end/: hello.html  hello.rs
handle/: handlepage.js
src/: content.rs  database.rs  db.rs  lib.rs  main.rs  push_github.rs  route.rs
src-wasm/: lib.rs
src/back_end/: api.rs  mod.rs  route.rs  routes.rs
src/front_end/: content.rs  get_json.rs  hello.rs  home.rs  login.rs  mod.rs  nghidinh.rs  query_sql.rs  register.rs  side_right.rs  summary.rs
src/front_end/handle/: handleDocuments.js  handleSummary.js  handleSummaryContent.js  main.js
src/front_end/nghidinh138/: documents_nghidinh.rs  get_json.rs  mod.rs  nghidinh.rs  nghidinh138.rs
src/front_end/trangchu/: home.rs
static/: index.css  login.css  nghidinh.css  register.css  register.js
