[package]
name = "hello_rust2"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
# Các metadata yêu cầu
description = "Mô tả ngắn gọn về crate của bạn"
authors = ["Your Name <your-email@example.com>"]
repository = "https://github.com/PHAMGIABAO2309/RUST"
homepage = "https://your-crate-homepage.com"
documentation = "https://docs.rs/your-crate-name"

keywords = ["rust", "crate", "example"]

[dependencies]
async-std = { version = "1.10", features = ["attributes"] }
rand = "0.8.0"
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
tokio-stream = "0.1"
bytes = "1.5"
diesel = { version = "2.1", features = ["sqlite"] }
dotenvy = "0.15"
wasm-bindgen = "0.2"
mio = "0.8"
hyper = "0.14"
tower = "0.4"
axum = "0.7"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio", "chrono"] }
actix-web = "4.9.0"
bcrypt = "0.17.0"
serde_urlencoded = "0.7"
regex = "1.10"
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
crossterm = "0.26"
smol = "1.3"
mysql = "24.0"




[lib]
crate-type = ["cdylib", "rlib"]
name = "hello_rust2_lib"  # Tên thư viện (thường là tên project)
path = "src/lib.rs"

[features]
push_github = []


